--- a/tools/Brewfile
+++ b/tools/Brewfile
@@ -7,3 +7,23 @@ tap 'homebrew/services'
 brew 'git'
 
 cask 'google-chrome'
+cask 'firefox'
+cask 'atom'
+cask '1password'
+cask 'adobe-creative-cloud'
+cask 'sketch'
+cask 'unity-download-assistant'
+cask 'spotify'
+cask 'slack'
+cask 'discord'
+cask 'minecraft'
+cask 'google-drive-file-stream'
+cask 'bartender'
+cask 'skyfonts'
+cask 'harvest'
+cask 'rescuetime'
+cask 'vlc'
+cask 'docker'
+cask 'istat-menus'
+cask 'backblaze'
+cask 'backblaze-downloader'
