--- a/tools/Brewfile
+++ b/tools/Brewfile
@@ -12,8 +12,7 @@ cask 'istat-menus'
 cask 'google-chrome'
 cask 'google-trends'
 # cask "cyberduck"
-# cask "hyper"
-# cask "gifcapture"
+cask 'gifcapture'
 cask 'bartender'
 cask 'spotify'
 cask 'backblaze'
@@ -37,6 +36,7 @@ mas "Contrast", id: 1254981365
 # Developer
 brew 'emojify'
 brew 'yarn'
+cask 'hyper'
 cask 'atom'
 cask 'docker'
 mas 'Xcode', id: 497799835
