--- a/tools/Brewfile
+++ b/tools/Brewfile
@@ -30,7 +30,7 @@ mas 'Harvest', id: 506189836
 cask 'adobe-creative-cloud'
 cask 'skyfonts'
 cask 'sketch'
-cash 'sketchup'
+cask 'sketchup'
 cask 'unity-download-assistant'
 mas "Contrast", id: 1254981365
 
